--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <main>
                 <p>
                 <span class="destaque">Sobre Mim:</span> <br>
-                Meu nome é Murilo Novaes Gama, 18 anos, sou de salvador bahia. <br>
+                Meu nome é Murilo Novaes Gama, 18 anos, sou de Salvador Bahia. <br>
                 Desenvolvedor front-end com experiencia em HTML, CSS e JavaScripit. <br>
                 Estou sempre buscando aprender mais e me aprimorar na área da tecnologia. <br>
                 Atualmente estudando na faculdade de Engenharia de software na UniJorge.
