--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <aside>
                 <div class="cntn">
                     <h1 class="meunome">Murilo Novaes</h1>
-                <img class="murilo" src="img minha.jpg" alt="">
+                <img class="murilo" src="minhafoto.jpg" alt="">
                 </div>
             </aside>
             
